Improved compatibility with Android Studio